[package]
name = "keypunch"
version = "0.1.0"
edition = "2021"

[dependencies]
discord-presence = "1.5.0"
# Locked to 0.7.0 because of https://github.com/hfiguiere/i18n-format/issues/1
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
gvdb-macros = "0.1.12"
i18n-format = "0.2.0"
include_dir = "0.7.3"
rand = "0.8.5"
rayon = "1.10.0"
strum = "0.26.2"
strum_macros = "0.26.2"
unicode-segmentation = "1.11.0"
unidecode = "0.3.0"

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_16", "blueprint"]

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
