# Cargo.toml
#
# SPDX-FileCopyrightText: © 2024 Brage Fuglseth <bragefuglseth@gnome.org>
# SPDX-License-Identifier: GPL-3.0-or-later
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "keypunch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
discord-presence = "1.5.0"
# Locked to 0.7.0 because of https://github.com/hfiguiere/i18n-format/issues/1
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
graphene = { package = "graphene-rs", version = "0.20.7" }
gvdb-macros = "0.1.12"
i18n-format = "0.2.0"
include_dir = "0.7.3"
rand = "0.8.5"
rayon = "1.10.0"
refinery = { version = "0.8.14", features = ["rusqlite"] }
rusqlite = { version = "=0.31.0", features = ["bundled"] } # Locked until Refinery is updated
strum = "0.26.2"
strum_macros = "0.26.2"
unicode-segmentation = "1.11.0"
unidecode = "0.3.0"

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_16", "blueprint"]

[dependencies.adw]
package = "libadwaita"
version = "0.7.1"
features = ["v1_7"]
